--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "schulapprn-finalversion",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+  
+  "resolutions": {
+    "@expo/cli": "expo start",
+    "@expo/cli/android": "expo start --android",
+    "@expo/cli/ios": "expo start --ios",
+    "@expo/cli/web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
@@ -19,14 +20,16 @@
     "@react-navigation/native": "6.0.10",
     "@react-navigation/native-stack": "6.6.1",
     "@react-navigation/stack": "6.2.1",
-    "expo": "^31.0.5",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-tab-view": "^3.0.0"
+    "react-native-tab-view": "^3.0.0",
+    "expo": "^48.0.0",
+    "react-native": "0.71.8",
+    "react": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
